<resources>
    <string name="app_name">Time to travel</string>
    <string name="currency">RUB</string>
    <string name="start_city">Start city</string>
    <string name="end_city">End city</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="price">Price</string>
    <string name="search_token">Search Token</string>
    <string name="like" translatable="false">like</string>
    <string name="back">BACK</string>
    <string name="base_gradient" translatable="false">base_gradient</string>
    <string name="details" translatable="false">details</string>
</resources>