<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context="ru.netology.timetotravel.fragments.ItemDetails">

    <TextView
        android:id="@+id/tvStartCity"
        style="@style/Text.WBStyle.Normal.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_city"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEndCity"
        style="@style/Text.WBStyle.Normal.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/end_city"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvStartCity"
        app:layout_constraintTop_toBottomOf="@+id/tvStartCity" />

    <TextView
        android:id="@+id/tvStartDate"
        style="@style/Text.WBStyle.Normal.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/start_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvEndCity"
        app:layout_constraintTop_toBottomOf="@+id/tvEndCity" />

    <TextView
        android:id="@+id/tvEndDate"
        style="@style/Text.WBStyle.Normal.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/end_date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvStartDate"
        app:layout_constraintTop_toBottomOf="@+id/tvStartDate" />

    <TextView
        android:id="@+id/tvPrice"
        style="@style/Text.WBStyle.Normal.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvEndDate"
        app:layout_constraintTop_toBottomOf="@+id/tvEndDate" />

    <TextView
        android:id="@+id/tvToken"
        style="@style/Text.WBStyle.Normal.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:text="@string/search_token"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvPrice"
        app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

    <TextView
        android:id="@+id/searchToken"
        style="@style/Text.WBStyle.Bold.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvToken"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/startCity"
        style="@style/Text.WBStyle.Bold.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvStartCity"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/endCity"
        style="@style/Text.WBStyle.Bold.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvEndCity"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detailsStartDate"
        style="@style/Text.WBStyle.Bold.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvStartDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/detailsEndDate"
        style="@style/Text.WBStyle.Bold.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvEndDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.App.Button.OutlinedButton.Like"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToken"
        app:backgroundTint="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:textColor="@color/white"
        app:icon="@drawable/ic_back"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToken" />



    <TextView
        android:id="@+id/detailsPrice"
        style="@style/Text.WBStyle.Bold.Magenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvPrice"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>